added js + menu

--- a/ericDuongstyle.css
+++ b/ericDuongstyle.css
@@ -4,7 +4,7 @@
 	align-items: center;
 	background-image: url('http://i.imgur.com/DrWpd3W.jpg');
 	background-size: cover;
-	height: 500px;
+	height: 100%;
 	//text-shadow: 0.25px 0.25px 0.25px #000000;
 }
 
