--- a/ericDuongstyle.css
+++ b/ericDuongstyle.css
@@ -2,7 +2,7 @@
 .jumbotron{
 	background-image: url('http://i.imgur.com/DrWpd3W.jpg');
 	background-size: cover;
-	height: 100%;
+	height: 722px;
 }
 
 .jumbotron h1{
