--- a/ericDuongstyle.css
+++ b/ericDuongstyle.css
@@ -2,12 +2,13 @@
 .jumbotron{
 	background-image: url('http://i.imgur.com/DrWpd3W.jpg');
 	background-size: cover;
+	background-position: center top;
 	height: 722px;
 }
 
 .jumbotron h1{
 	color: #FFF;
-	margin: auto;
+	text-align: center;
 }
 
 .jumbotron h3{
@@ -16,5 +17,10 @@
 }
 
 .menu {
-	
+	margin: 10px;
+	font-weight: 700;
+}
+
+.header {
+	text-align: center;
 }
