--- a/ericDuongstyle.css
+++ b/ericDuongstyle.css
@@ -24,3 +24,15 @@
 .header {
 	text-align: center;
 }
+
+.weights li {
+  background-color: #fff;
+  border: 1px solid #d8d8d8;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  word-wrap: break-word;
+  min-height: 42px;
+}
